Prevented course-version-id overflowing into dropdown-arrow & adjusted max-width
With this, the size of the dropdown is a bit smaller, without affecting the functionality of the dropdown. The padding also prevents the text from covering the dropdown arrow, which helps with readability.

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -1625,7 +1625,7 @@ margin-block-end: 10px;
 }
 #courseVersionDropDown{
   vertical-align: top;
-  max-width: 60px;
+  max-width: 50px; 
 }
 
 .burgerButt {
@@ -4378,6 +4378,7 @@ span.arrow {
   width: inherit;
   white-space: nowrap;
   overflow: hidden;
+  padding-right: 15px;
   text-overflow: ellipsis;
 }
 
